--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,10 +41,14 @@ jobs:
           go install github.com/google/osv-scanner/cmd/osv-scanner@v1.9.0
           echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Reset git auth
+       - name: Hard reset git credentials
         run: |
+          rm -f ~/.gitconfig
+          rm -f ~/.config/git/config
+          git config --global --unset-all credential.helper || true
           git config --global --unset-all http.https://github.com/.extraheader || true
           git config --global --unset-all http.https://github.com/.header || true
+
 
       - name: Clone repo
         run: git clone --depth 1 https://github.com/${{ matrix.repo }} project
