--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,19 +10,14 @@ permissions:
 
 jobs:
   fetch_repos:
-      runs-on: ubuntu-latest
-      outputs:
-        repos: ${{ steps.set.outputs.repos }}
-      steps:
-        - id: set
-          run: |
-            echo 'repos=[
-              "OWASP-Benchmark/BenchmarkJava",
-              "bkimminich/juice-shop",
-              "snyk/vuln-demo",
-              "snyk/vuln-demo-python",
-              "google/go-github"
-            ]' >> $GITHUB_OUTPUT
+    runs-on: ubuntu-latest
+    outputs:
+      repos: ${{ steps.set.outputs.repos }}
+    steps:
+      - id: set
+        run: |
+          echo 'repos=["OWASP-Benchmark/BenchmarkJava","bkimminich/juice-shop","snyk/vuln-demo","snyk/vuln-demo-python","google/go-github"]' >> $GITHUB_OUTPUT
+  
 
   scan_repo:
     needs: fetch_repos
